# ParticlesGL

./: .gitignore  CMakeLists.txt  README.MD  imgui.ini  particle_system_performance.md  run.bat  run.sh  run_log.txt  scene.json  test_scene.json
.github/workflows/: ci.yml
assets/models/: primitives.blend  primitives.blend1
assets/shaders/: color_wave.comp  particle.frag  particle.vert  particle_compact.comp  particle_emit_events.comp  particle_simulate.comp  particle_spawn_from_events.comp  radix_sort_histogram.comp  radix_sort_init.comp  radix_sort_scan.comp  radix_sort_scatter.comp  unlit.frag  unlit.vert
cmake/: dependencies.cmake
docs/: ecs.md  editor.md  index.md  particle_comparison.md  particle_system_log.md  particles.md  patent_ideas.md  renderer.md
src/: main.cpp
src/core/: Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  Logger.hpp  Window.cpp  Window.hpp
src/demo/: ComputeApp.cpp  ComputeApp.hpp  ComputeExample.cpp  ComputeExample.hpp  main_compute.cpp
src/ecs/: ComponentPool.hpp  Entity.hpp  Registry.cpp  Registry.hpp  System.hpp
src/ecs/components/: CameraController.hpp  Lifetime.hpp  ParticleEmitter.hpp  Renderable.hpp  Transform.hpp
src/ecs/systems/: CameraControllerSystem.cpp  CameraControllerSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp
src/particle_instances/: BUILD.bazel  README.md  mesh_utils.h  particle_instances.cc  particle_instances.h  position_utils.h
src/particle_instances/data/: example.mat
src/particle_system/: BUILD  README.md  emitter.cc  emitter.h  particle.h  particle_system.cc  particle_system.h  random_value.h  shape_utils.cc  shape_utils.h
src/particle_system/data/: BUILD  default_particle_material.mat
src/particle_system/utils/: billboard.glsl  colorUtils.glsl  movement.glsl  particle_movement.glsl
src/particles/: ParticleData.hpp  ParticlePool.cpp  ParticlePool.hpp
src/particles_v2/: ParticlePoolComponent.hpp  ParticleRenderSystem.cpp  ParticleRenderSystem.hpp  ParticleSimulationSystem.cpp  ParticleSimulationSystem.hpp  RadixSortSystem.cpp  RadixSortSystem.hpp
src/renderer/: Camera.cpp  Camera.hpp  ComputeShader.cpp  ComputeShader.hpp  Framebuffer.cpp  Framebuffer.hpp  GpuParticleBuffer.cpp  GpuParticleBuffer.hpp  InstanceBuffer.cpp  InstanceBuffer.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  PersistentInstanceBuffer.cpp  PersistentInstanceBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderStorageBuffer.cpp  ShaderStorageBuffer.hpp
src/serialization/: ComponentSerializer.hpp  SceneSerializer.cpp  SceneSerializer.hpp
src/ui/: AssetsPanel.cpp  AssetsPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  MaterialsPanel.cpp  MaterialsPanel.hpp  ScenePanel.cpp  ScenePanel.hpp  StatsPanel.cpp  StatsPanel.hpp  UILayer.cpp  UILayer.hpp  ViewportPanel.cpp  ViewportPanel.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/ecs/: test_component_pool.cpp  test_components.cpp  test_registry.cpp  test_system.cpp
tests/particles/: test_particle_pool.cpp  test_particle_system.cpp
tests/renderer/: test_camera.cpp
tests/serialization/: test_component_serializer.cpp  test_scene_serializer.cpp
