load("@com_google_impress//build_tools:imp.bzl",  "if_desktop", "imp_default_jni_linkopts", "imp_google3_copts", "if_android")
load("@com_google_impress//build_tools:assets.bzl", "imp_assets")
load("@com_google_impress//build_tools:imp_material.bzl", "imp_material")

package(
    default_applicable_licenses = [],
    default_visibility = [
        "//visibility:public",
    ],
    features = [
        "-use_header_modules",  # Incompatible with -std=c++14.
    ],
)

licenses(["unencumbered"])

imp_material(
    name = "example_material",
    src = "data/example.mat",
)

imp_assets(
    name = "particle_instances_assets",
    srcs = [
        ":example_material",
    ],
    namespace = "ix::samsung::homecomponents::assets"
)

cc_library(
    name = "particle_instances",
    srcs = [
        "particle_instances.cc",
    ],
    hdrs = [
        "particle_instances.h",
        "mesh_utils.h",
        "position_utils.h",
    ],
    copts = imp_google3_copts(),
    deps = [
        ":particle_instances_assets",
        "//proto/components:particle_instances_state_cc_imp",
        "@com_google_impress//:api"
    ],
)
